guia10/service_tls.yml
apiVersion: v1
kind: Service
metadata:
  name: service-nginx-tls
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
